# AppCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  build-arm64.sh  build.bat  build.sh  toolchain-arm64.cmake  vcpkg-configuration.json
HelloHuiyu/: CMakeLists.txt
QnnEyegaze/: CMakeLists.txt
QnnEyegaze/src/: main.cpp
